config/dependencies/istio/gateway/mcp-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio: ingressgateway
  name: kuadrant-ingressgateway
spec:
  gatewayClassName: istio
  listeners:
    - name: mcp # deny all by default overridden by AuthPolicy on route
      hostname: 'mcp.example.com' #public accessibly MCP host one used by client
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: mcps # deny all by default overridden by AuthPolicy on route
      hostname: '*.mcp.example.com' #public accessibly MCP host (doesn't need dns as it is for rewritten hosts only)
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
